Images and Color

--- a/eVotingUI/css/screen.css
+++ b/eVotingUI/css/screen.css
@@ -464,7 +464,7 @@ span.pink {
 	border-bottom:1px dashed #c7b3a9;
 }
 .latest figure {
-	background:#f9efe3 url(../images/rausch.png) repeat;
+	background:#eeeeee url(../images/rausch.png) repeat;
 	border-top:4px solid #f0dec8;
 	-webkit-border-bottom-right-radius: 5px;
 	-webkit-border-bottom-left-radius: 5px;
